[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test_defense_shield"
dynamic = ["version"]
description = "test project"
readme = "README.md"
authors = [{name="Jonathan Halverson", email="halverson@princeton.edu"}]
maintainers = [{name="Jonathan Halverson", email="halverson@princeton.edu"}]
keywords = ["Slurm", "underutilization"]
requires-python = ">=3.7"
dependencies = [
  "pandas",
  "pyarrow",
  "pyyaml",
  "requests"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)"
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]

[project.optional-dependenices]
test = ["pytest>=6"]

[project.urls]
"Source Code" = "https://github.com/jdh4/test_defense_shield"
"Documentation" = "https://princetonuniversity.github.io/job_defense_shield"
"Homepage" = "https://github.com/jdh4/test_defense_shield"
"Repository" = "https://github.com/jdh4/test_defense_shield"

[project.scripts]
project-cli = "test_defense_shield.test_defense_shield:main"

[tool.hatch]
version.path = "src/test_defense_shield/__init__.py"
